Fixed: Read more button being too close to the second section

--- a/site-sass/site-specific/site.front-page.scss
+++ b/site-sass/site-specific/site.front-page.scss
@@ -98,7 +98,7 @@ div.no-pad {
 .news-wrapper {
   width: 100%;
   height: auto;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
   text-align: center;
 }
 
